--- a/proyectoIntegrador/src/index.css
+++ b/proyectoIntegrador/src/index.css
@@ -2,11 +2,17 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  position: fixed;
+  
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -65,4 +71,9 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+canvas{
+  touch-action: none;
+  display: block; 
 }
